references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/BindingConnector_invalid1.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:324eb2f0a019294fcb1303a319e8cbb91bc232deaf3083b6e3fc573734bb73c1
size 2711
